<?xml version="1.0"?>
<package format="2">
  <name>leo_big_brother</name>
  <version>0.0.0</version>
  <description>The leo_big_brother package</description>

  <maintainer email="piotr@todo.todo">piotr</maintainer>

  <license>TODO</license>


 
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tf</exec_depend>
  <exec_depend>ar_track_alvar</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
   

  </export>
</package>
